# DAT295-Railway-Inspection-System

./: .gitignore  .gitmodules  LICENSE  README.md  run.sh
.cache/clangd/index/: Accelerometer.cpp.2E725CA43A85A263.idx  Accelerometer.hpp.08C12262FBAE2DA8.idx  AdsbConflict.cpp.049C0F32239463C7.idx  AdsbConflict.h.2E1A06D745508A65.idx  AdsbConflictTest.cpp.EE502E2B1B72CEC1.idx  AdsbConflictTest.h.FADF7EFAB86F5348.idx  AlphaFilter.hpp.322462D159122D1C.idx  AlphaFilterTest.cpp.A435A2E55631D52F.idx  Array.hpp.D11CFDBDF335184D.idx  AxisAngle.hpp.9AEF3C635AEDF826.idx  Barometer.cpp.99B88B50267BA2A6.idx  Barometer.hpp.DA237D7ACC9C013B.idx  BezierN.cpp.3780177AAA9500A3.idx  BezierN.hpp.C3E7E66E35BA3CD4.idx  BezierNTest.cpp.F492EC57506198CD.idx  BezierQuad.cpp.F2BC1CA95FD07DC2.idx  BezierQuad.hpp.45816779D2CA1900.idx  Bitset.hpp.C1EE6610372F1593.idx  Block.cpp.F4B0D9E59591EF93.idx  Block.hpp.41A82881FEDE142C.idx  BlockDelay.hpp.153B8F3FB6EFEF32.idx  BlockDerivative.cpp.9534158B42A2A94D.idx  BlockDerivative.hpp.83A7A39B86D90F47.idx  BlockHighPass.cpp.D78E61F5422C4417.idx  BlockHighPass.hpp.206CFD10B6D751D3.idx  BlockIntegral.cpp.DF38FD1DF88A6A11.idx  BlockIntegral.hpp.9CB1C2BF814CF9AC.idx  BlockIntegralTrap.cpp.D840AB5EF2996D51.idx  BlockIntegralTrap.hpp.4F38B64C27F9DD48.idx  BlockLimit.cpp.A062BA40C4A49050.idx  BlockLimit.hpp.7877E0BCC968E334.idx  BlockLimitSym.cpp.1D9AB8B713F5DBBC.idx  BlockLimitSym.hpp.3F50039B3827F528.idx  BlockLowPass.cpp.785982E63E7F8840.idx  BlockLowPass.hpp.285CC641B32F2085.idx  BlockLowPass2.cpp.7992E33CB6BD8C07.idx  BlockLowPass2.hpp.9D2759D4E5D7482C.idx  BlockLowPassVector.hpp.8D3FEA817163C0BC.idx  BlockOutput.hpp.4472963B0B084D2B.idx  BlockP.hpp.EA199CB1739D31CC.idx  (+390 more)
evaluation_scripts/slam_evaluation/src/: ATE.py  ATE_combined.py  RPE.py
scripts/: copy_models.sh
src/behaviors/: CMakeLists.txt  package.xml
src/behaviors/src/: behavior.py  turtle_navigator.py
src/camera_handler/: package.xml  setup.py
src/camera_handler/camera_handler/: picture_taker.py
src/clustering_velodyne_subscriber/: package.xml  setup.cfg  setup.py
src/clustering_velodyne_subscriber/clustering_velodyne_subscriber/: clustering_script.py
src/docking/: package.xml  setup.py
src/docking/docking/: controller.py  offboard_control.py
src/glim_ros/: imgui.ini
src/iris_odometry_converter/: package.xml  setup.cfg  setup.py
src/iris_odometry_converter/iris_odometry_converter/: odometry_converter.py
src/object_detection_eval/: CMakeLists.txt  package.xml
src/object_detection_eval/include/object_detection_eval/: exporter.hpp  filtered_model_position.hpp  model_position.hpp  models_info.hpp
src/object_detection_eval/msg/: BoundingBoxModel.msg  ModelBoundingBox.msg
src/object_detection_eval/script/: evaluate.py  evaluate_fined.py
src/object_detection_eval/script/cfgs/: 02-config.yaml  04-config.yaml  06-config.yaml
src/object_detection_eval/src/: bounding_box_world_plugin.cpp  exporter.cpp  filter_model_position_node.cpp  filtered_model_position.cpp  model_position.cpp  model_position_node.cpp
src/pose_logger_node/: package.xml  setup.cfg  setup.py
src/pose_logger_node/pose_logger_node/: pose_logger_node.py
src/px4_ros_com/: CMakeLists.txt
src/px4_ros_com/src/examples/offboard/: offboard_control_gps.cpp
src/px4_ros_com/src/examples/teleop_py/: control.py  teleop.py  velocity_control.py
src/rail_detection/: README.md  package.xml  setup.cfg  setup.py
src/rail_detection/rail_detection/: rail_crack_detection_laserscan.py
src/rtab/: README.md
src/tb3_autonomy/: CMakeLists.txt  README.md  package.xml
src/tb3_autonomy/launch/: tb3_demo_behavior_py.launch.py
src/tb3_autonomy/locations/: locations.yaml
src/tb3_autonomy/python/tb3_behaviors/: dock.py  undock.py
src/tb3_autonomy/scripts/: autonomy_node.py  autonomy_node_routine_1.py
src/tb_pose_node/: package.xml  setup.cfg  setup.py
src/tb_pose_node/tb_pose_node/: tb_pose_node.py
src/test_world_gazebo/: package.xml  setup.cfg  setup.py
src/test_world_gazebo/config/: ekf_config.yaml
src/test_world_gazebo/launch/: all_launch.py  amp_and_tb_3d_lidar_launch.py  amp_and_tb_launch.py  ekf.launch.py  empty_world.launch.py  gazebo.launch.py  nav2.launch.py  robot_state_publisher.launch.py  robot_state_publisher_amp.launch.py  slam.launch.py  spawn_amp.launch.py  spawn_turtlebot3.launch.py  turtle_3d.launch.py  turtlebot_launch.py
src/test_world_gazebo/params/: nav2_params.yaml  slam_toolbox_params.yaml
src/test_world_gazebo/rviz/: lidar_vis.rviz
src/test_world_gazebo/test_world_gazebo/: drive.py  input_handler.py  movetoamp.py  speed.py  speed_controller.py  stop.py  undock.py
src/test_world_gazebo/worlds/: brand_new_world.world  simple.world  v1_simple_world.world  v2_curved_world.world  v3_tunnel_world.world  v4_basic.world
src/test_world_gazebo/worlds/models/: longrails.mtl
src/test_world_gazebo/worlds/models/Box/: model.config  model.sdf
src/test_world_gazebo/worlds/models/amp/: amp.sdf  model.config  model.sdf
src/test_world_gazebo/worlds/models/amp_axle/: amp_axle.sdf  model.config  model.sdf
src/test_world_gazebo/worlds/models/amp_axle_only/: model.config  model.sdf
src/test_world_gazebo/worlds/models/amp_hull/: amp_hull.sdf  model.config  model.sdf
src/test_world_gazebo/worlds/models/amp_wheel/: model.sdf
src/test_world_gazebo/worlds/models/asphalt_plane_long/: model.sdf
src/test_world_gazebo/worlds/models/crashing_rails2/: model.config  model.sdf
src/test_world_gazebo/worlds/models/newamp/: model.config  model.sdf
src/test_world_gazebo/worlds/models/newrail/: model.sdf
src/test_world_gazebo/worlds/models/rails2/: model.config  model.sdf
src/test_world_gazebo/worlds/models/turtlebot3_burger/: model.sdf
src/test_world_gazebo/worlds/models/turtlebot3_burger_velodyne/: model.sdf
src/test_world_gazebo/worlds/models/turtlebot3_waffle/: model-1_4.sdf  model.sdf
src/test_world_gazebo/worlds/models/turtlebot3_waffle_velodyne/: model.sdf
src/world_to_yaml/: package.xml  setup.cfg  setup.py
src/world_to_yaml/world_to_yaml/: object_position_logger.py
(+20 files in other folders)
