<?xml version="1.0"?>
<package format="3">
  <name>rail_detection</name>
  <version>0.0.1</version>
  <description>Rail crack detection package using LaserScan for ROS2</description>
  <maintainer email="ninghu@chalmers.se">Ning</maintainer>
  <license>MIT</license>


  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>